first hw solved

--- a/assignments/hw01_numpy_solved.ipynb
+++ b/assignments/hw01_numpy_solved.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -114,30 +114,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "def graded_generate_pauli():\n",
     "    ### Start code here\n",
-    "    pauliX = graded_zero_vector(length):\n",
-    "    pauliY = np.array([[0, -1j],[1j, 0]])\n",
-    "    pauliZ = np.array([[1, 0],[0, -1]])\n",
+    "    pauliX = np.array([[0., 1.],[1., 0.]])\n",
+    "    pauliY = np.array([[0., -1j],[1j, 0.]])\n",
+    "    pauliZ = np.array([[1., 0.],[0., -1.]])\n",
     "    ### End code here\n",
     "    return(pauliX, pauliY, pauliZ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pauli X: [[0 1]\n",
-      " [1 0]]\n"
+      "Pauli X: [[0. 1.]\n",
+      " [1. 0.]]\n"
      ]
     }
    ],
@@ -164,37 +164,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graded_pauli_check(coordinate): # coordinate can be 'X', 'Y' or 'Z'    \n",
+    "def graded_pauli_check(coordinate): # coordinate can be 'X', 'Y' or 'Z'\n",
     "    coord_index_map = {'X':0, 'Y':1, 'Z':2}\n",
     "    pauli_index = coord_index_map[coordinate]\n",
     "    ### Start code here\n",
     "    \n",
     "    #retreive the corresponding Pauli matrix (use the function above)\n",
-    "    pauliMatrix = None \n",
+    "    pauliMatrix = graded_generate_pauli()[pauli_index]\n",
     "    \n",
     "    # calculate its determinant\n",
-    "    det = None \n",
+    "    det = np.linalg.det(pauliMatrix)\n",
     "\n",
     "    # calculate its square\n",
-    "    square = None \n",
+    "    square = pauliMatrix*pauliMatrix\n",
     "\n",
     "    # calculate its trace\n",
-    "    trace = None \n",
+    "    trace = np.matrix.trace(pauliMatrix)\n",
     "    ### End code here\n",
     "    return(det, square, trace)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant: -1.0\n",
+      "Trace: 0j\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Determinant:', graded_pauli_check('Y')[0])\n",
+    "print('Determinant:', graded_pauli_check('X')[0])\n",
     "print('Trace:', graded_pauli_check('Y')[2])"
    ]
   },
@@ -232,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
