--- a/assignments/hw09_wordembedding_solved.ipynb
+++ b/assignments/hw09_wordembedding_solved.ipynb
@@ -134,8 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[')', '-', \"'\", '(', '.', ' ', ',']\n",
-      "[')', '=', '(', '/', ' ', '$']\n"
+      "[\"'\", '.', ')', '-', '(', ' ', ',']\n",
+      "['=', ')', '/', '(', '$', ' ']\n"
      ]
     }
    ],
@@ -667,10 +667,10 @@
     "    \n",
     "    # add a Dense layer with hidden_dim neurons. Input_dim is the dictionary_size \n",
     "    # we don't need nor activation neither bias!\n",
-    "    cbow.add( Dense( units=hidden_dim, input_dim=dictionary_size ) )\n",
+    "    cbow.add( Dense(hidden_dim, input_shape=[dictionary_size], use_bias=False ) )\n",
     "    \n",
     "    # add a Dense layer with dictionary_size neurons. We don't need bias. Activation is softmax.\n",
-    "    cbow.add( Dense( dictionary_size, activation='softmax' ) )\n",
+    "    cbow.add( Dense( dictionary_size, activation='softmax', use_bias=False ) )\n",
     "    \n",
     "    ###End code here\n",
     "    \n",
@@ -706,56 +706,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 01 , Loss: 4.7586794431544535\n",
-      "Epoch 02 , Loss: 4.518692344673409\n",
-      "Epoch 03 , Loss: 4.255744753790296\n",
-      "Epoch 04 , Loss: 3.988212269199781\n",
-      "Epoch 05 , Loss: 3.7487746280086927\n",
-      "Epoch 06 , Loss: 3.5080418291170736\n",
-      "Epoch 07 , Loss: 3.252182791548327\n",
-      "Epoch 08 , Loss: 2.985652515218278\n",
-      "Epoch 09 , Loss: 2.7174030606411703\n",
-      "Epoch 10 , Loss: 2.456019152787106\n",
-      "Epoch 11 , Loss: 2.207960256121375\n",
-      "Epoch 12 , Loss: 1.977073643325774\n",
-      "Epoch 13 , Loss: 1.7649289029688875\n",
-      "Epoch 14 , Loss: 1.571613081353755\n",
-      "Epoch 15 , Loss: 1.3965290213419386\n",
-      "Epoch 16 , Loss: 1.2388765081640118\n",
-      "Epoch 17 , Loss: 1.0977831985339646\n",
-      "Epoch 18 , Loss: 0.9722480773925781\n",
-      "Epoch 19 , Loss: 0.8610947100707322\n",
-      "Epoch 20 , Loss: 0.7630182220792967\n",
-      "Epoch 21 , Loss: 0.6766798335535467\n",
-      "Epoch 22 , Loss: 0.600784124052229\n",
-      "Epoch 23 , Loss: 0.534119549615324\n",
-      "Epoch 24 , Loss: 0.4755722809244286\n",
-      "Epoch 25 , Loss: 0.4241276587213367\n",
-      "Epoch 26 , Loss: 0.37887232852253044\n",
-      "Epoch 27 , Loss: 0.33899781366517723\n",
-      "Epoch 28 , Loss: 0.3038004254845302\n",
-      "Epoch 29 , Loss: 0.2726745953829574\n",
-      "Epoch 30 , Loss: 0.24510070299806674\n",
-      "Epoch 31 , Loss: 0.2206313854452869\n",
-      "Epoch 32 , Loss: 0.19887952203285103\n",
-      "Epoch 33 , Loss: 0.17950911219578145\n",
-      "Epoch 34 , Loss: 0.16222813299833988\n",
-      "Epoch 35 , Loss: 0.1467834544822204\n",
-      "Epoch 36 , Loss: 0.13295608339831233\n",
-      "Epoch 37 , Loss: 0.1205567842164685\n",
-      "Epoch 38 , Loss: 0.10942237309857526\n",
-      "Epoch 39 , Loss: 0.09941203955730255\n",
-      "Epoch 40 , Loss: 0.09040402576773743\n",
-      "Epoch 41 , Loss: 0.08229254787857067\n",
-      "Epoch 42 , Loss: 0.07498525156858878\n",
-      "Epoch 43 , Loss: 0.06840095372797445\n",
-      "Epoch 44 , Loss: 0.06246759408453772\n",
-      "Epoch 45 , Loss: 0.057120905253913036\n",
-      "Epoch 46 , Loss: 0.05230309136071404\n",
-      "Epoch 47 , Loss: 0.04796212964714312\n",
-      "Epoch 48 , Loss: 0.04405088149336328\n",
-      "Epoch 49 , Loss: 0.04052686324239178\n",
-      "Epoch 50 , Loss: 0.037351644628975646\n"
+      "Epoch 01 , Loss: 4.757902797588632\n",
+      "Epoch 02 , Loss: 4.569841851872846\n",
+      "Epoch 03 , Loss: 4.332312020388517\n",
+      "Epoch 04 , Loss: 4.05116119857662\n",
+      "Epoch 05 , Loss: 3.7797340194055855\n",
+      "Epoch 06 , Loss: 3.52606862734172\n",
+      "Epoch 07 , Loss: 3.270518987631995\n",
+      "Epoch 08 , Loss: 3.0075937588352804\n",
+      "Epoch 09 , Loss: 2.742490475335397\n",
+      "Epoch 10 , Loss: 2.482943834352099\n",
+      "Epoch 11 , Loss: 2.2352868141221607\n",
+      "Epoch 12 , Loss: 2.0032213897990787\n",
+      "Epoch 13 , Loss: 1.7885457347493527\n",
+      "Epoch 14 , Loss: 1.5920573501301205\n",
+      "Epoch 15 , Loss: 1.4138775098422343\n",
+      "Epoch 16 , Loss: 1.253557709376674\n",
+      "Epoch 17 , Loss: 1.110213507305492\n",
+      "Epoch 18 , Loss: 0.9826928034794232\n",
+      "Epoch 19 , Loss: 0.869721542520464\n",
+      "Epoch 20 , Loss: 0.7699966922032931\n",
+      "Epoch 21 , Loss: 0.6822283177459536\n",
+      "Epoch 22 , Loss: 0.6051579220913166\n",
+      "Epoch 23 , Loss: 0.5375705709881033\n",
+      "Epoch 24 , Loss: 0.47831214622648294\n",
+      "Epoch 25 , Loss: 0.4263121908730712\n",
+      "Epoch 26 , Loss: 0.3806064144577369\n",
+      "Epoch 27 , Loss: 0.3403481248427521\n",
+      "Epoch 28 , Loss: 0.3048072372186036\n",
+      "Epoch 29 , Loss: 0.2733597507130755\n",
+      "Epoch 30 , Loss: 0.24547456905307355\n",
+      "Epoch 31 , Loss: 0.2206996281300325\n",
+      "Epoch 32 , Loss: 0.1986493872293879\n",
+      "Epoch 33 , Loss: 0.17899405974740826\n",
+      "Epoch 34 , Loss: 0.16145004690740228\n",
+      "Epoch 35 , Loss: 0.14577259393870706\n",
+      "Epoch 36 , Loss: 0.1317494174981228\n",
+      "Epoch 37 , Loss: 0.11919560355388305\n",
+      "Epoch 38 , Loss: 0.10794935875364449\n",
+      "Epoch 39 , Loss: 0.09786855711694037\n",
+      "Epoch 40 , Loss: 0.08882776629141231\n",
+      "Epoch 41 , Loss: 0.0807160754564934\n",
+      "Epoch 42 , Loss: 0.07343512065593184\n",
+      "Epoch 43 , Loss: 0.06689749715834363\n",
+      "Epoch 44 , Loss: 0.06102541370571337\n",
+      "Epoch 45 , Loss: 0.05574953437432616\n",
+      "Epoch 46 , Loss: 0.05100786496696547\n",
+      "Epoch 47 , Loss: 0.04674510702669759\n",
+      "Epoch 48 , Loss: 0.042911803654841464\n",
+      "Epoch 49 , Loss: 0.03946378983630345\n",
+      "Epoch 50 , Loss: 0.03636153665908096\n"
      ]
     }
    ],
@@ -827,56 +827,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 01 , Loss: 4.753682873712099\n",
-      "Epoch 02 , Loss: 4.404932165195134\n",
-      "Epoch 03 , Loss: 4.225737095864351\n",
-      "Epoch 04 , Loss: 4.109275015301941\n",
-      "Epoch 05 , Loss: 3.984424395255806\n",
-      "Epoch 06 , Loss: 3.8494740369891334\n",
-      "Epoch 07 , Loss: 3.7105588856314826\n",
-      "Epoch 08 , Loss: 3.574207337804077\n",
-      "Epoch 09 , Loss: 3.44503702297191\n",
-      "Epoch 10 , Loss: 3.3256930525391555\n",
-      "Epoch 11 , Loss: 3.217459232477117\n",
-      "Epoch 12 , Loss: 3.1206600627869614\n",
-      "Epoch 13 , Loss: 3.034926518366849\n",
-      "Epoch 14 , Loss: 2.9594786190543294\n",
-      "Epoch 15 , Loss: 2.893356397009093\n",
-      "Epoch 16 , Loss: 2.8355529180858747\n",
-      "Epoch 17 , Loss: 2.785069369580135\n",
-      "Epoch 18 , Loss: 2.7409545455959217\n",
-      "Epoch 19 , Loss: 2.7023456783826685\n",
-      "Epoch 20 , Loss: 2.6684913225779847\n",
-      "Epoch 21 , Loss: 2.638750745429973\n",
-      "Epoch 22 , Loss: 2.612579349397628\n",
-      "Epoch 23 , Loss: 2.589513196063436\n",
-      "Epoch 24 , Loss: 2.569155093928999\n",
-      "Epoch 25 , Loss: 2.5511629064836776\n",
-      "Epoch 26 , Loss: 2.5352400181091523\n",
-      "Epoch 27 , Loss: 2.521127571436492\n",
-      "Epoch 28 , Loss: 2.508599183591437\n",
-      "Epoch 29 , Loss: 2.497455943221888\n",
-      "Epoch 30 , Loss: 2.4875235906070916\n",
-      "Epoch 31 , Loss: 2.478649299129967\n",
-      "Epoch 32 , Loss: 2.4706994500165145\n",
-      "Epoch 33 , Loss: 2.4635579026927634\n",
-      "Epoch 34 , Loss: 2.457123782762811\n",
-      "Epoch 35 , Loss: 2.451309988875527\n",
-      "Epoch 36 , Loss: 2.446041337837858\n",
-      "Epoch 37 , Loss: 2.441253191983897\n",
-      "Epoch 38 , Loss: 2.4368899105008968\n",
-      "Epoch 39 , Loss: 2.432903109072161\n",
-      "Epoch 40 , Loss: 2.429250497832771\n",
-      "Epoch 41 , Loss: 2.425895267651101\n",
-      "Epoch 42 , Loss: 2.4228060884047147\n",
-      "Epoch 43 , Loss: 2.4199557825307214\n",
-      "Epoch 44 , Loss: 2.4173206174053434\n",
-      "Epoch 45 , Loss: 2.414879694642607\n",
-      "Epoch 46 , Loss: 2.41261463538428\n",
-      "Epoch 47 , Loss: 2.4105092732251183\n",
-      "Epoch 48 , Loss: 2.4085492261431436\n",
-      "Epoch 49 , Loss: 2.4067217590025636\n",
-      "Epoch 50 , Loss: 2.405015454743027\n"
+      "Epoch 01 , Loss: 4.76751418892017\n",
+      "Epoch 02 , Loss: 4.662828480655497\n",
+      "Epoch 03 , Loss: 4.473134076792347\n",
+      "Epoch 04 , Loss: 4.248324799759329\n",
+      "Epoch 05 , Loss: 4.063080647144436\n",
+      "Epoch 06 , Loss: 3.8961407140759396\n",
+      "Epoch 07 , Loss: 3.7363942716239897\n",
+      "Epoch 08 , Loss: 3.5848968345517953\n",
+      "Epoch 09 , Loss: 3.4448363665214257\n",
+      "Epoch 10 , Loss: 3.318426569631277\n",
+      "Epoch 11 , Loss: 3.2060630868289097\n",
+      "Epoch 12 , Loss: 3.1069386927795803\n",
+      "Epoch 13 , Loss: 3.0198223701685913\n",
+      "Epoch 14 , Loss: 2.943464539329375\n",
+      "Epoch 15 , Loss: 2.8766883220061783\n",
+      "Epoch 16 , Loss: 2.8183812273065905\n",
+      "Epoch 17 , Loss: 2.7674990826524977\n",
+      "Epoch 18 , Loss: 2.7230841944779245\n",
+      "Epoch 19 , Loss: 2.684280044899499\n",
+      "Epoch 20 , Loss: 2.6503357281985362\n",
+      "Epoch 21 , Loss: 2.6206005263673373\n",
+      "Epoch 22 , Loss: 2.5945130491798576\n",
+      "Epoch 23 , Loss: 2.5715898963784385\n",
+      "Epoch 24 , Loss: 2.551414049915538\n",
+      "Epoch 25 , Loss: 2.533625251559679\n",
+      "Epoch 26 , Loss: 2.51791179494178\n",
+      "Epoch 27 , Loss: 2.504003643804838\n",
+      "Epoch 28 , Loss: 2.491667106070302\n",
+      "Epoch 29 , Loss: 2.4806998854210556\n",
+      "Epoch 30 , Loss: 2.470927083048939\n",
+      "Epoch 31 , Loss: 2.46219751349658\n",
+      "Epoch 32 , Loss: 2.4543805236905074\n",
+      "Epoch 33 , Loss: 2.4473632215714654\n",
+      "Epoch 34 , Loss: 2.4410480158018673\n",
+      "Epoch 35 , Loss: 2.4353503368733342\n",
+      "Epoch 36 , Loss: 2.430196989912632\n",
+      "Epoch 37 , Loss: 2.425524439016157\n",
+      "Epoch 38 , Loss: 2.4212775974234275\n",
+      "Epoch 39 , Loss: 2.417408457964905\n",
+      "Epoch 40 , Loss: 2.413875186985189\n",
+      "Epoch 41 , Loss: 2.4106413797775574\n",
+      "Epoch 42 , Loss: 2.407675118732058\n",
+      "Epoch 43 , Loss: 2.4049484754396864\n",
+      "Epoch 44 , Loss: 2.4024370338552252\n",
+      "Epoch 45 , Loss: 2.4001193485599903\n",
+      "Epoch 46 , Loss: 2.397976369466171\n",
+      "Epoch 47 , Loss: 2.395991551420413\n",
+      "Epoch 48 , Loss: 2.3941501050818066\n",
+      "Epoch 49 , Loss: 2.3924389018500145\n",
+      "Epoch 50 , Loss: 2.390846545969652\n"
      ]
     }
    ],
